fix: TRACEFOSS-1241 Fixed visibility issue with long text

--- a/frontend/src/app/modules/shared/components/notification-overview/notification-overview.component.scss
+++ b/frontend/src/app/modules/shared/components/notification-overview/notification-overview.component.scss
@@ -26,25 +26,11 @@
 
 .detail--info__content {
   padding-bottom: 0.5rem;
-  display: table;
-  & > div {
-    display: table-row;
-  }
 }
 
 .detail--text {
-  display: table-cell;
-  padding-bottom: 0.5em;
-
   &__bold {
     font-weight: bold;
     padding-right: 1rem;
-  }
-
-  &__description {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    max-width: 275px;
   }
 }
