--- a/frontend/src/app/modules/shared/modules/notification/notification-tab/notification-tab.component.scss
+++ b/frontend/src/app/modules/shared/modules/notification/notification-tab/notification-tab.component.scss
@@ -27,7 +27,7 @@
 }
 
 .notification-status {
-  @apply border-0 uppercase inline-flex items-center gap-1 px-3 py-1 rounded-full font-semibold text-xs;
+  @apply border-0 uppercase inline-flex items-center gap-1 px-3 py-1 rounded-full font-semibold text-xs w-fit;
 
   &:before {
     content: ' ';
